# celery-demo

./: LICENSE.md  README.md  pyproject.toml
src/celery_demo/: __about__.py  __main__.py  app.py  demo.py  progress.py  tasks.py
